removed double quotes from some key properties

--- a/config.ini
+++ b/config.ini
@@ -8,8 +8,8 @@ dir=
 ; separate keywords by ','
 keyword=
 ; state spelled out
-state=""
-zip=""
+state=
+zip=
 ; radius in miles
 radius=
 ; # of pages to search
