modified config.ini to reflect changes in parsing

--- a/config.ini
+++ b/config.ini
@@ -25,8 +25,8 @@ radius=
 ; # of pages to search
 pages=
 
-; 1 - writing listings to text file, 2 - send listings to email address
-; Option 2 requires gmail credentials
+; file - writing listings to text file, email - send listings to email address
+; email requires gmail credentials
 [method]
 option=
 
